--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
-name="Penny"
+name="Penny Dialogue / Visual Novel Engine"
 description="Godot interface for Penny files"
 author="nulture"
 version="0.0"
-script="penny_plugin.gd"
+script="editor/scripts/penny_plugin.gd"
