Determined resource loading methods for #39 and #2

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,5 +1,6 @@
 [plugin]
-name="Penny Dialogue / Visual Novel Engine"
+
+name="Penny VN Tools"
 description="Godot interface for Penny files"
 author="nulture"
 version="0.0"
