--- a/plugin.cfg
+++ b/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Penny VN Tools"
 description="Godot interface for Penny files"
-author="nulture"
+author="snotbane"
 version="0.0"
 script="assets/scripts/editor/penny_plugin.gd"
