--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Penny VN Tools"
+name="Penny Auxiliary Engine"
 description="Godot interface for Penny files"
 author="snotbane"
 version="0.0"
-script="assets/scripts/editor/plugin.gd"
+script="Plugin.gd"
